@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2903834 by drunken monkey: Adapted to latest changes in Autocomplete module.
 - #2903633 by drunken monkey: Fixed current test fails.
 - #2899920 by kfritsche: Fixed stored value of boolean Views filters.
 - #2896312 by kerasai, drunken monkey: Fixed problems with Views options list
